@@ -5,6 +5,7 @@ filebeat:
       - /var/log/hello1.log
       - /var/log/hello2.log
     index: logs-generic-default
+    dataset: generic
     vars:
       var: value
     processors:
